--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,10 @@ buildJavaDoc = true
 buildNativeProjects = false
 buildAndroidExamples = false
 
-# Path to Android NDK for building native libraries
+buildForPlatforms = Linux64,Linux32,Windows64,Windows32,Mac64,Mac32
+
+# Path to android NDK for building native libraries
+#ndkPath=/Users/normenhansen/Documents/Code-Import/android-ndk-r7
 ndkPath = /opt/android-ndk-r16b
 
 # Path for downloading native Bullet
