gradle.properties: ready for 3.3.0-alpha3 build

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,10 +2,10 @@
 jmeVersion = 3.3.0
 # Version used for application and settings folder, no spaces!
 jmeMainVersion = 3.3
-# Version addition pre-alpha-svn, Stable, Beta
-jmeVersionTag = SNAPSHOT
+# Version addition: SNAPSHOT, alpha, beta, stable
+jmeVersionTag = alpha3
 # Increment this each time jmeVersionTag changes but jmeVersion stays the same
-jmeVersionTagID = 2
+jmeVersionTagID = 3
 
 # specify if JavaDoc should be built
 buildJavaDoc = true
@@ -25,7 +25,7 @@ bulletZipFile = bullet3.zip
 
 # POM settings
 POM_NAME=jMonkeyEngine
-POM_DESCRIPTION=jMonkeyEngine is a 3D game engine for adventurous Java developers
+POM_DESCRIPTION=jMonkeyEngine is a 3-D game engine for adventurous Java developers
 POM_URL=http://jmonkeyengine.org
 POM_SCM_URL=https://github.com/jMonkeyEngine/jmonkeyengine
 POM_SCM_CONNECTION=scm:git:git://github.com/jMonkeyEngine/jmonkeyengine.git
