gradle.properties: ready for 3.3.0-alpha4 build

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,9 @@ jmeVersion = 3.3.0
 # Version used for application and settings folder, no spaces!
 jmeMainVersion = 3.3
 # Version addition: SNAPSHOT, alpha, beta, stable
-jmeVersionTag = alpha3
+jmeVersionTag = alpha4
 # Increment this each time jmeVersionTag changes but jmeVersion stays the same
-jmeVersionTagID = 3
+jmeVersionTagID = 4
 
 # specify if JavaDoc should be built
 buildJavaDoc = true
@@ -14,7 +14,7 @@ buildJavaDoc = true
 buildNativeProjects = false
 buildAndroidExamples = false
 
-# Path to android NDK for building native libraries
+# Path to Android NDK for building native libraries
 #ndkPath=/Users/normenhansen/Documents/Code-Import/android-ndk-r7
 ndkPath = /opt/android-ndk-r16b
 
