post-release cleanup

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
-# Version number used for plugins, only 3 numbers (e.g. 3.1.3)
+# Version number: Major.Minor.Patch (e.g. 3.1.3)
 jmeVersion = 3.3.0
-# Version used for application and settings folder, no spaces!
+# Version for application and settings folder (no spaces!)
 jmeMainVersion = 3.3
-# Version addition: SNAPSHOT, alpha, beta, stable
-jmeVersionTag = alpha5
+# Version label: SNAPSHOT, alpha1, beta1, stable
+jmeVersionTag = SNAPSHOT
 # Increment this each time jmeVersionTag changes but jmeVersion stays the same
-jmeVersionTagID = 5
+jmeVersionTagID = 6
 
 # specify if JavaDoc should be built
 buildJavaDoc = true
@@ -15,7 +15,6 @@ buildNativeProjects = false
 buildAndroidExamples = false
 
 # Path to Android NDK for building native libraries
-#ndkPath=/Users/normenhansen/Documents/Code-Import/android-ndk-r7
 ndkPath = /opt/android-ndk-r16b
 
 # Path for downloading native Bullet
@@ -38,4 +37,3 @@ POM_INCEPTION_YEAR=2009
 # Bintray settings to override in $HOME/.gradle/gradle.properties or ENV or commandline
 bintray_user=
 bintray_api_key=
-
