--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,12 @@
-# Version number: Major.Minor.Patch (e.g. 3.1.3)
-jmeVersion = 3.3.0
-# Version for application and settings folder (no spaces!)
-jmeMainVersion = 3.3
-# Version label: SNAPSHOT, alpha1, beta1, stable
-jmeVersionTag = SNAPSHOT
-# Increment this each time jmeVersionTag changes but jmeVersion stays the same
-jmeVersionTagID = 6
+# Version number: Major.Minor (e.g. 3.3)
+jmeVersion = 3.3
+
+# Leave empty  to autogenerate
+# (use -PjmeVersionName="myVersion" from commandline to specify a custom version name )
+jmeVersionName = 
+
+# If true, the version name will contain the commit hash
+useCommitHashAsVersionName = false
 
 # specify if JavaDoc should be built
 buildJavaDoc = true
