--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -114,14 +114,14 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-18.04,windows-2019,macOS-10.14] 
+        os: [ubuntu-18.04,windows-2019,macOS-latest] 
         jdk: [8.x.x]
         include:
           - os: ubuntu-18.04
             osName: linux
           - os: windows-2019
             osName: windows
-          - os: macOS-10.14
+          - os: macOS-latest
             osName: mac
               
     name: Build natives for ${{ matrix.osName }}
@@ -147,19 +147,7 @@ jobs:
           # Install dependencies
           if [ "$OS_NAME" = "mac" ];
           then
-            echo "Prepare mac"
-            # We need this older version to compile for 32bit...
-            sudo xcode-select -switch  /Applications/Xcode_9.4.1.app
-
-            # ghetto fix for expired certificate (still safer than -allowUntrusted) 
-            cdate=`date +%m%d%H%M%y`
-            sudo date -u 1020000019
-            
-
-            sudo installer -pkg /Library/Developer/CommandLineTools/Packages/macOS_SDK_headers_for_macOS_10.14.pkg -target /
-          
-            # restore real date
-            sudo date -u "$cdate"
+            echo "Prepare mac"        
           
           elif [ "$OS_NAME" = "linux" ];
           then
@@ -191,7 +179,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-18.04,windows-2019,macOS-10.14]
+        os: [ubuntu-18.04,windows-2019,macOS-latest]
         jdk: [8.x.x,11.x.x]
         include:
           - os: ubuntu-18.04
@@ -199,7 +187,7 @@ jobs:
             deploy: true
           - os: windows-2019
             osName: windows
-          - os: macOS-10.14
+          - os: macOS-latest
             osName: mac 
           - jdk: 11.x.x
             deploy: false 
