Refactored how versions are auto-built to provide more normal versions when building locally. Normal auto-detected versions will be based on the base version parsed from the most recent tag on the branch with a -SNAPSHOT appended.  If the current commit is the tagged commit then it is used directly to preserve backwards compatibility... but really that should be a CI only option for most use-cases. A new includeBranchInVersion option was added to allow the old behavior of including the branch name in a munged version string for those wanting to keep their experimental branch builds separate from their normal master/version-branch builds.

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,10 @@ jmeVersionName =
 # If true, the version name will contain the commit hash
 useCommitHashAsVersionName = false
 
+# Set to true if a non-master branch name should be included in the automatically 
+# generated version.
+includeBranchInVersion = false
+
 # specify if JavaDoc should be built
 buildJavaDoc = true
 
