Updating the version.gradle to fix an issue with auto-versioning on the master branch. (On master we want to default to the gradle.properties version and not the latest tag for non-specific-commit tags.) Updated gradle.properties to set master to be 3.4.0 for further development.

--- a/version.gradle
+++ b/version.gradle
@@ -81,8 +81,8 @@ task configureVersionInfo {
 
         // Parse out just the base version part.  -SNAPSHOT versions
         // shouldn't really include our release suffixes
-        def baseVersion = (tagVersion =~/(\d+\.\d+.\d+)/)
-        baseVersion = baseVersion.size() > 0 ? baseVersion[0][0] : tagVersion
+        def baseVersion = (jmeVersion =~/(\d+\.\d+.\d+)/)
+        baseVersion = baseVersion.size() > 0 ? baseVersion[0][0] : jmeVersion
 
         if( !jmeVersionName ) {
             // If there is a specific tag for the top commit then we always
