build with -Xlink:unchecked

--- a/common.gradle
+++ b/common.gradle
@@ -12,6 +12,12 @@ version = jmeFullVersion
 sourceCompatibility = '1.8'
 [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile) { // compile-time options:
+        options.compilerArgs << '-Xlint:unchecked'
+    }
+}
+
 repositories {
     mavenCentral()
     maven {
