--- a/gradle.properties
+++ b/gradle.properties
@@ -22,6 +22,10 @@ buildAndroidExamples = false
 buildForPlatforms = Linux64,Linux32,Windows64,Windows32,Mac64
 # Forcefully ignore prebuilt libraries
 skipPrebuildLibraries=false
+
+# Enable spotbugs
+enableSpotBugs=false
+
 # Path to android NDK for building native libraries
 #ndkPath=/Users/normenhansen/Documents/Code-Import/android-ndk-r7
 ndkPath = /opt/android-ndk-r16b
